--- a/SimchaFund.web/Views/Home/History.cshtml
+++ b/SimchaFund.web/Views/Home/History.cshtml
@@ -34,7 +34,7 @@
                             }
                         
                         <td style="text-align: center; vertical-align: middle;">
-                           @history.Date
+                           @history.Date.ToShortDateString()
                         </td>
                         <td style="text-align: center; vertical-align: middle;">
                            @history.Amount.ToString("c")
