--- a/SimchaFund.web/Views/Home/Index.cshtml
+++ b/SimchaFund.web/Views/Home/Index.cshtml
@@ -1,8 +1,78 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@using SimchaFund.data
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model SimchaViewModel
+
+@if (!string.IsNullOrEmpty(Model.Message))
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @Model.Message
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+<div class="header">
+    <h1>Simchas</h1>
 </div>
+<div class="row header">
+    <div class="col-md-4">
+        <button class="btn btn btn-danger" id="new-simcha">New Simcha</button>
+    </div>
+</div>
+<br />
+<div class="table-responsive">
+    <table class="table table-striped table-bordered">
+        <thead class="table-info">
+            <tr>
+                <th>Contributions</th>
+                <th>Simcha Name</th>
+                <th>Contributor Count</th>
+                <th>Total</th>
+                <th>Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach(var simcha in Model.Simchas)
+            {
+            <tr>
+                <td><a class="btn btn-primary" href="/home/donate?simchaid=@simcha.Id&simchaName=@simcha.Name">Contributions</a> </td>
+                <td>@simcha.Name</td>
+                <td>
+                    @simcha.Donors / @Model.TotalDonors
+                </td>
+                <td>@simcha.Donations.ToString("c")</td>
+                <td>@simcha.Date.ToShortDateString()</td>
+            </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<div class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">New Simcha</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="/home/newSimcha">
+                    <div class="form-group">
+                        <label class="form-label">Simcha Name</label>
+                        <input class="form-control" name="name" placeholder="Simcha Name" type="text">
+                    </div>
+                    <div class="form-group mt-3">
+                        <label class="form-label">Date</label>
+                        <input type="date" name="date" class="form-control" id="datepicker">
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Cancel</button>
+                        <button class="btn btn-primary" name="commit">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+@section Scripts{
+    <script src="~/js/newsimcha.js"></script>
+}
